2001-09-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-resume-forms): Abolished.
	(w3m-clear-local-variables): Don't handle `w3m-resume-forms'.
	(w3m-copy-local-variables): Ditto.
	(w3m-fontify): Don't call `w3m-form-resume'.
	(w3m-cache-available-p): Protect against the illegal type of
	arguments.
	(w3m-rendering-region): Removed the fourth optional argument,
	`forms'.
	(w3m-exec): Follow change of `w3m-rendering-region'.

	* w3m-form.el (w3m-form-parse-region): Check the cached form/map
	objects are available, and if available return them with the flag.
	(w3m-fontify-forms): Its real part is moved to `w3m-form-fontify'.
	Call `w3m-form-resume' if `w3m-current-forms' includes the flag.
	(w3m-form-fontify): New function.

2001-09-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-resume): Ignore `hidden' type form;
	Fixed problem when no item is selected in the select form.

	* w3m.el (w3m-copy-local-variables): Bind local variable resume.

2001-09-14  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-resume-forms): New buffer local variable.
	(w3m-clear-local-variables): Add w3m-resume-forms.
	(w3m-copy-local-variables): Ditto.
	(w3m-fontify): If w3m-resume-forms is non-nil, call w3m-form-resume.
	(w3m-rendering-region): Set w3m-resume-forms if form is cached.

	* w3m-form.el (w3m-form-replace-string): Eliminate.
	(w3m-form-resume): New function.
	(w3m-fontify-forms): Don't call `w3m-form-replace-string'.

2001-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-replace-string): Protect against the
	illegal type of arguments.

2001-09-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-region): Defined new optional argument, `url'.

	* mime-w3m.el (mime-w3m-preview-text/html): Call `w3m-region' with
	an optional argument `url'.

2001-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-fontify-forms): Restore a string for the input
	button from the history if it is available.